<resources>
    <string name="app_name">TaskMaster</string>
    <string name="welcome_message">Üdvözöljük a TaskMaster alkalmazásban!</string>
    <string name="add_task">Feladat hozzáadása</string>
    <string name="task_hint">Írd be a feladatot...</string>
    <string name="doneButton">✅</string>
    <string name="undo">🔁</string>
    <string name="delButton">❌</string>
    <string name="authorText">Készítette: BoBenc</string>
    <string name="alertTextTitle">Feladat törlése</string>
    <string name="alertText">Biztosan törölni szeretnéd ezt a feladatot?</string>
    <string name="alertDeleteButton">Törlés</string>
    <string name="alertCancelButton">Mégsem</string>
    <string name="speaker">🔊</string>
</resources>