<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:padding="16dp"
        android:layout_marginTop="15dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskListView"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:layout_margin="16dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskEditText"
        android:hint="@string/task_hint"
        android:inputType="text"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:layout_gravity="center"
        android:padding="16dp"/>

</LinearLayout>