<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertTextTitle"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alertText"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/alertDeleteButton"
            android:background="@drawable/custom_delete_button"
            android:text="@string/alertDeleteButton"
            android:layout_marginEnd="15dp"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/alertCancelButton"
            android:background="@drawable/custom_cancel_button"
            android:text="@string/alertCancelButton"/>

    </LinearLayout>
</LinearLayout>